Changes to web layout files

--- a/views/index.mustache
+++ b/views/index.mustache
@@ -1,7 +1,4 @@
-{{#yield-title}} {{title}} {{/yield-title}}
-{{#yield-styles}}
 
-{{/yield-styles}}
 
 <h1>{{ title }}</h1>
 <p>Welcome to {{ title }}</p>
@@ -11,8 +8,8 @@
 {{/list}}
 </ul>
 
-{{#yield-scripts}}
-SCRIPTS
-{{/yield-scripts}}
-
-==========
+<div class="btn-group" role="group" aria-label="...">
+  <button type="button" class="btn btn-default">Left</button>
+  <button type="button" class="btn btn-default">Middle</button>
+  <button type="button" class="btn btn-default">Right</button>
+</div>
