--- a/views/layout.mustache
+++ b/views/layout.mustache
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+
+
+
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{{}}</title>
+
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>{{title}}</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
-
-    {{{yield-styles}}}
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -49,7 +54,6 @@
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     {{! <script src="js/bootstrap.min.js"></script> }}
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
-    {{{yield-scripts}}}
   </body>
 </html>
 
