google login done

--- a/views/login.mustache
+++ b/views/login.mustache
@@ -1,3 +1,5 @@
+<script src="https://apis.google.com/js/client:platform.js" async defer></script>
+
 <script>
 function signInCallback(authResult) {
   if (authResult.code) {
