--- a/views/layout_pratt.mustache
+++ b/views/layout_pratt.mustache
@@ -44,6 +44,36 @@
 	            <li><a href="#showcase" class="smothScroll">Showcase</a></li>
 	            <li><a href="#contact" class="smothScroll">Contact</a></li>
 	          </ul>
+
+	          <div style="float: right; position: relative; margin-top: 10px; margin-bottom: -10px;">
+	          	{{user.displayName}}
+				<script src="https://apis.google.com/js/client:platform.js" async defer></script>
+
+				<script>
+				function signInCallback(authResult) {
+				  if (authResult.code) {
+				    $.post('/auth/google/callback', { code: authResult.code})
+				    .done(function(data) {
+				      $('#signinButton').hide();
+				    }); 
+				  } else if (authResult.error) {
+				    console.log('There was an error: ' + authResult.error);
+				  }
+				};
+				</script>
+
+				<div id="signinButton">
+				  <span class="g-signin"
+				    data-scope="https://www.googleapis.com/auth/plus.login"
+				    data-clientid="791651266422-0rgikd8j6ls8cn70000i2vgumokps6ej.apps.googleusercontent.com"
+				    data-redirecturi="postmessage"
+				    data-accesstype="offline"
+				    data-cookiepolicy="single_host_origin"
+				    data-callback="signInCallback">
+				  </span>
+				</div>
+				<div id="result"></div>
+	          </div>
 	        </div><!--/.nav-collapse -->
 	      </div>
 	    </div>
