--- a/views/layout_pratt.mustache
+++ b/views/layout_pratt.mustache
@@ -38,11 +38,12 @@
 	          <a class="navbar-brand" href="#"><b>JustLunchMe</b></a>
 	        </div>
 	        <div class="navbar-collapse collapse">
-	          <ul class="nav navbar-nav">
+	          <ul class="nav navbar-nav navbar-nav-jlm">
 	            <li class="active"><a href="#home" class="smothscroll">Home</a></li>
-	            <li><a href="#desc" class="smothscroll">Description</a></li>
-	            <li><a href="#showcase" class="smothScroll">Showcase</a></li>
-	            <li><a href="#contact" class="smothScroll">Contact</a></li>
+	            <li><a href="#intro" class="smothscroll">Intro</a></li>
+	            <li><a href="#friends" class="smothScroll">Friends</a></li>
+	            <li><a href="#times" class="smothscroll">Scheduling</a></li>
+	            <li><a href="#feed" class="smothScroll">Match Feed</a></li>
 	          </ul>
 
 	          <div style="float: right; position: relative; margin-top: 10px; margin-bottom: -10px;">
@@ -145,177 +146,155 @@
 	    </div>
 
 
-	<section id="home" name="home"></section>
+{{! 	    	    <li class="active"><a href="#home" class="smothscroll">Home</a></li>
+	            <li><a href="#desc" class="smothscroll">Description</a></li>
+	            <li><a href="#showcase" class="smothScroll">Showcase</a></li>
+	            <li><a href="#contact" class="smothScroll">Contact</a></li> }}
+
+<!-- Home Section --> 
+	<section id="home" name="Welcome"></section>
 	<div id="headerwrap">
 	    <div class="container">
 	    	<div class="row centered">
 	    		<div class="col-lg-12">
+					<br><br><br><br>
 					<h1>Welcome To <b>JustLunchMe</b></h1>
-					<h3>Show your product with this handsome theme.</h3>
+					<h3>Reunite with friends. Be happy.</h3>
+					<br>
+	    		</div>
+	    		<div class="col-lg-12">
+	    			{{! <div style="height:300px"></div> }}
+	    			{{! <img  style="margin: auto" class="img-responsive" src="/img/women_lunch1.jpg" alt=""> }}
+	    			<br><br>
+	    		</div>
+	    		<div class="col-lg-12">
+	    			<div class="btn-group" role="group" aria-label="...">
+	    				<br><br>
+					  <button type="button" class="btn btn-default">Login</button>
+					</div>
+	    			<br><br>
+	    		</div>
+
+
+	    	</div>
+	    </div> <!--/ .container -->
+	</div><!--/ #headerwrap -->
+
+
+<!-- Intro Section --> 
+	<section id="intro" name="intro"></section>
+	<!-- INTRO WRAP -->
+	<div id="bodywrap2">
+		<div class="container">
+			<div class="row centered">
+				<h1>How This Works</h1>
+				<br>
+				<br>
+				<div class="col-lg-4">
+					<img src="/img/intro01.png" alt="">
+					<h3>Add Friends</h3>
+					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+				</div>
+				<div class="col-lg-4">
+					<img src="/img/intro02.png" alt="">
+					<h3>Fill in Availability</h3>
+					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+				</div>
+				<div class="col-lg-4">
+					<img src="/img/intro03.png" alt="">
+					<h3>Get Notified</h3>
+					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+				</div>
+			</div>
+	    </div> <!--/ .container -->
+	</div><!--/ #introwrap -->
+
+
+
+<!-- Friends Section --> 
+	<section id="friends" name="Friends"></section>
+	<div id="bodywrap1">
+	    <div class="container">
+	    	<div class="row centered">
+	    		<div class="col-lg-12">
+					<h1>Friends</h1>
+					<h3>Maintain your friend list here.</h3>
 					<br>
 	    		</div>
 	    		
-	    		<div class="col-lg-2">
-	    			<h5>Amazing Results</h5>
-	    			<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-	    			<img class="hidden-xs hidden-sm hidden-md" src="/img/arrow1.png">
+	    		<div class="col-lg-6">
+	    			<h2>Notifications</h2>
+					<div class="list-group list-left-align">
+					     <a href="#" class="list-group-item"><span class="badge">Add</span>     <span class="badge">Ignore</span> Person 1
+					  </a>
+					  <a href="#" class="list-group-item">Person 2</a>
+					</div>
+
+					<h2>Add Friends</h2>
+					<div class="list-group">
+					  <a href="#" class="list-group-item">Person 1
+					  </a>
+					  <a href="#" class="list-group-item">Person 2</a>
+					  <a href="#" class="list-group-item">Person 3</a>
+					  <a href="#" class="list-group-item">Person 4</a>
+					  <a href="#" class="list-group-item">Person 5</a>
+					</div>
 	    		</div>
-	    		<div class="col-lg-8">
-	    			<img class="img-responsive" src="/img/app-bg.png" alt="">
-	    		</div>
-	    		<div class="col-lg-2">
-	    			<br>
-	    			<img class="hidden-xs hidden-sm hidden-md" src="/img/arrow2.png">
-	    			<h5>Awesome Design</h5>
-	    			<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+	    		<div class="col-lg-6">
+	    			<h2>Your Friends</h2>
+					<div class="list-group">
+					  <a href="#" class="list-group-item">Person 1
+					  </a>
+					  <a href="#" class="list-group-item">Person 2</a>
+					  <a href="#" class="list-group-item">Person 3</a>
+					  <a href="#" class="list-group-item">Person 4</a>
+					  <a href="#" class="list-group-item">Person 5</a>
+					  <a href="#" class="list-group-item">Person 6</a>
+					  <a href="#" class="list-group-item">Person 7</a>
+					  <a href="#" class="list-group-item">Person 8</a>
+					</div>
+					<br>
 	    		</div>
 	    	</div>
 	    </div> <!--/ .container -->
 	</div><!--/ #headerwrap -->
 
 
-	<section id="desc" name="desc"></section>
-	<!-- INTRO WRAP -->
-	<div id="intro">
-		<div class="container">
-			<div class="row centered">
-				<h1>Designed To Excel</h1>
-				<br>
-				<br>
-				<div class="col-lg-4">
-					<img src="/img/intro01.png" alt="">
-					<h3>Community</h3>
-					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-				</div>
-				<div class="col-lg-4">
-					<img src="/img/intro02.png" alt="">
-					<h3>Schedule</h3>
-					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-				</div>
-				<div class="col-lg-4">
-					<img src="/img/intro03.png" alt="">
-					<h3>Monitoring</h3>
-					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-				</div>
-			</div>
-			<br>
-			<hr>
-	    </div> <!--/ .container -->
-	</div><!--/ #introwrap -->
-	
-	<!-- FEATURES WRAP -->
-	<div id="features">
-		<div class="container">
-			<div class="row">
-				<h1 class="centered">What's New?</h1>
-				<br>
-				<br>
-				<div class="col-lg-6 centered">
-					<img class="centered" src="/img/mobile.png" alt="">
-				</div>
-				
-				<div class="col-lg-6">
-					<h3>Some Features</h3>
+<!-- Calendar Section --> 
+	<section id="times" name="Times"></section>
+	<div id="bodywrap2">
+	    <div class="container">
+	    	<div class="row centered">
+	    		<div class="col-lg-12">
+					<h1>Time Selection</h1>
+					<h3>Click and drag your dates on the calendar</h3>
 					<br>
-				<!-- ACCORDION -->
-		            <div class="accordion ac" id="accordion2">
-		                <div class="accordion-group">
-		                    <div class="accordion-heading">
-		                        <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne">
-		                        First Class Design
-		                        </a>
-		                    </div><!-- /accordion-heading -->
-		                    <div id="collapseOne" class="accordion-body collapse in">
-		                        <div class="accordion-inner">
-								<p>It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-								</div><!-- /accordion-inner -->
-		                    </div><!-- /collapse -->
-		                </div><!-- /accordion-group -->
-		                <br>
-		
-		                <div class="accordion-group">
-		                    <div class="accordion-heading">
-		                        <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo">
-		                        Retina Ready Theme
-		                        </a>
-		                    </div>
-		                    <div id="collapseTwo" class="accordion-body collapse">
-		                        <div class="accordion-inner">
-								<p>It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-								</div><!-- /accordion-inner -->
-		                    </div><!-- /collapse -->
-		                </div><!-- /accordion-group -->
-		                <br>
-		
-		                 <div class="accordion-group">
-		                    <div class="accordion-heading">
-		                        <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseThree">
-		                        Awesome Support
-		                        </a>
-		                    </div>
-		                    <div id="collapseThree" class="accordion-body collapse">
-		                        <div class="accordion-inner">
-								<p>It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-								</div><!-- /accordion-inner -->
-		                    </div><!-- /collapse -->
-		                </div><!-- /accordion-group -->
-		                <br>
-		                
-		                 <div class="accordion-group">
-		                    <div class="accordion-heading">
-		                        <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseFour">
-		                        Responsive Design
-		                        </a>
-		                    </div>
-		                    <div id="collapseFour" class="accordion-body collapse">
-		                        <div class="accordion-inner">
-								<p>It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-								</div><!-- /accordion-inner -->
-		                    </div><!-- /collapse -->
-		                </div><!-- /accordion-group -->
-		                <br>			
-					</div><!-- Accordion -->
-				</div>
-			</div>
-		</div><!--/ .container -->
-	</div><!--/ #features -->
-	
-	
-	<section id="showcase" name="showcase"></section>
-	<div id="showcase">
-		<div class="container">
-			<div class="row">
-				<h1 class="centered">Some Screenshots</h1>
-				<br>
-				<div class="col-lg-8 col-lg-offset-2">
-					<div id="carousel-example-generic" class="carousel slide">
-					  <!-- Indicators -->
-					  <ol class="carousel-indicators">
-					    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-					    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-					  </ol>
-					
-					  <!-- Wrapper for slides -->
-					  <div class="carousel-inner">
-					    <div class="item active">
-					      <img src="/img/item-01.png" alt="">
-					    </div>
-					    <div class="item">
-					      <img src="/img/item-02.png" alt="">
-					    </div>
-					  </div>
-					</div>
-				</div>
-			</div>
-			<br>
-			<br>
-			<br>	
-		</div><!-- /container -->
-	</div>	
+	    		</div>
+	    		<div class="col-lg-12">
+	    			<img style="margin: auto" class="img-responsive" src="/img/calendar_placeholder.png" alt="">
+	    		</div>
+	    		<br><br>
+	    	</div>
+	    </div> <!--/ .container -->
+	</div><!--/ #headerwrap -->
 
+<!-- Thank you Section --> 
+	<section id="times" name="Times"></section>
+	<div id="bodywrap1">
+	    <div class="container">
+	    	<div class="row centered">
+	    		<div class="col-lg-12">
+					<h1><b>Thank you</b></h1>
+					<h3>Check your inbox every day at 10 AM to see if you've been matched!</h3>
+					<br><br><br>
+	    		</div>
+	    	</div>
+	    </div> <!--/ .container -->
+	</div><!--/ #headerwrap -->
 
+<!-- Contact Section -->
 	<section id="contact" name="contact"></section>
-	<div id="footerwrap">
+	<div id="footerwrap" style="display:none">
 		<div class="container">
 			<div class="col-lg-5">
 				<h3>Address</h3>
@@ -351,7 +330,7 @@
 	</div>
 	<div id="c">
 		<div class="container">
-			<p>Created by <a href="http://www.blacktie.co">BLACKTIE.CO</a></p>
+			<p>Created by <a href="http://www.malcolmocean.com">Malcolm Ocean</a>, Will Cullen and Noah MacCallum</p>
 		
 		</div>
 	</div>
