--- a/views/layout_pratt.mustache
+++ b/views/layout_pratt.mustache
@@ -25,6 +25,22 @@
     <link href="//cdnjs.cloudflare.com/ajax/libs/fullcalendar/2.2.6/fullcalendar.min.css" />
     <link href="//cdnjs.cloudflare.com/ajax/libs/fullcalendar/2.2.6/fullcalendar.print.css" />
     <script src="/js/smoothscroll_pratt.js"></script>
+
+
+    <style>
+		body {
+			margin: 40px 10px;
+			padding: 0;
+			font-family: "Lucida Grande",Helvetica,Arial,Verdana,sans-serif;
+			font-size: 14px;
+		}
+
+		#calendar {
+			max-width: 900px;
+			margin: 0 auto;
+		}
+	</style>
+
   </head>
 
   <body data-spy="scroll" data-offset="0" data-target="#navigation">
@@ -46,7 +62,6 @@
 	            <li><a href="#intro" class="smothscroll">Intro</a></li>
 	            <li><a href="#friends" class="smothScroll">Friends</a></li>
 	            <li><a href="#times" class="smothscroll">Scheduling</a></li>
-	            <li><a href="#feed" class="smothScroll">Match Feed</a></li>
 	          </ul>
 
 	          <div style="float: right; position: relative; margin-top: 10px; margin-bottom: -10px;">
@@ -186,7 +201,6 @@
 
 <div style="background: #662108; color: black">
 
-{{{yield}}}
 </div>
 
 <!-- Intro Section -->
@@ -195,116 +209,44 @@
 	<div id="bodywrap2">
 		<div class="container">
 			<div class="row centered">
-				<h1>How This Works</h1>
+				<h1>Effortless Lunch Scheduling</h1>
 				<br>
 				<br>
 				<div class="col-lg-4">
-					<img src="/img/intro01.png" alt="">
+					<img src="/img/Smiley_2.png" alt="">
 					<h3>Add Friends</h3>
-					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+					<p>Quickly add anyone via email or your Google contacts list, and we'll take care of the rest. </p>
 				</div>
 				<div class="col-lg-4">
 					<img src="/img/intro02.png" alt="">
 					<h3>Fill in Availability</h3>
-					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+					<p>Click and drag our simple weekly calendar to tell us your free lunch slots.</p>
 				</div>
 				<div class="col-lg-4">
-					<img src="/img/intro03.png" alt="">
-					<h3>Get Notified</h3>
-					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+					<img style="margin:23.5px 0;" src="/img/email_icon.png" alt="">
+					<h3>Get Matched</h3>
+					<p>Sit tight and wait for your friends to things on their side, we'll ping you if you have a match! </p>
 				</div>
 			</div>
 	    </div> <!--/ .container -->
+	    <br>
 	</div><!--/ #introwrap -->
 
-	<!-- FEATURES WRAP -->
-	<div id="features">
-		<div class="container">
-			<div class="row">
-				<h1 class="centered">What's New?</h1>
-				<br>
-				<br>
-				<div class="col-lg-6 centered">
-					<img class="centered" src="/img/mobile.png" alt="">
-				</div>
-
-				<div class="col-lg-6">
-					<h3>Some Features</h3>
-					<br>
-				<!-- ACCORDION -->
-		            <div class="accordion ac" id="accordion2">
-		                <div class="accordion-group">
-		                    <div class="accordion-heading">
-		                        <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne">
-		                        First Class Design
-		                        </a>
-		                    </div><!-- /accordion-heading -->
-		                    <div id="collapseOne" class="accordion-body collapse in">
-		                        <div class="accordion-inner">
-								<p>It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-								</div><!-- /accordion-inner -->
-		                    </div><!-- /collapse -->
-		                </div><!-- /accordion-group -->
-		                <br>
-
-		                <div class="accordion-group">
-		                    <div class="accordion-heading">
-		                        <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo">
-		                        Retina Ready Theme
-		                        </a>
-		                    </div>
-		                    <div id="collapseTwo" class="accordion-body collapse">
-		                        <div class="accordion-inner">
-								<p>It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-								</div><!-- /accordion-inner -->
-		                    </div><!-- /collapse -->
-		                </div><!-- /accordion-group -->
-		                <br>
-
-		                 <div class="accordion-group">
-		                    <div class="accordion-heading">
-		                        <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseThree">
-		                        Awesome Support
-		                        </a>
-		                    </div>
-		                    <div id="collapseThree" class="accordion-body collapse">
-		                        <div class="accordion-inner">
-								<p>It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-								</div><!-- /accordion-inner -->
-		                    </div><!-- /collapse -->
-		                </div><!-- /accordion-group -->
-		                <br>
-
-		                 <div class="accordion-group">
-		                    <div class="accordion-heading">
-		                        <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseFour">
-		                        Responsive Design
-		                        </a>
-		                    </div>
-		                    <div id="collapseFour" class="accordion-body collapse">
-		                        <div class="accordion-inner">
-								<p>It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-								</div><!-- /accordion-inner -->
-		                    </div><!-- /collapse -->
-		                </div><!-- /accordion-group -->
-		                <br>
-					</div><!-- Accordion -->
-				</div>
-			</div>
-		</div><!--/ .container -->
-	</div><!--/ #features -->
 
 <!-- Friends Section -->
+
 	<section id="friends" name="Friends"></section>
 	<div id="bodywrap1">
+
 	    <div class="container">
 	    	<div class="row centered">
 	    		<div class="col-lg-12">
-					<h1>Friends</h1>
-					<h3>Maintain your friend list here.</h3>
+					<h1>Friend List</h1>
 					<br>
 	    		</div>
-
+    		</div>
+			{{{yield}}}
+    		<div class="row centered">
 	    		<div class="col-lg-6">
 	    			<h2>Notifications</h2>
 					<div class="list-group list-left-align">
@@ -349,8 +291,8 @@
 	    <div class="container">
 	    	<div class="row centered">
 	    		<div class="col-lg-12">
-					<h1>Time Selection</h1>
-					<h3>Click and drag your dates on the calendar</h3>
+					<h1>Your Availability</h1>
+					<h3>Click and drag directly on the calendar anytime you're free.</h3>
 					<br>
 	    		</div>
 	    		<div class="col-lg-12">
@@ -360,6 +302,7 @@
 	    		<br><br>
 	    	</div>
 	    </div> <!--/ .container -->
+	    <br>
 	</div><!--/ #headerwrap -->
 
 <!-- Thank you Section -->
@@ -368,9 +311,9 @@
 	    <div class="container">
 	    	<div class="row centered">
 	    		<div class="col-lg-12">
-					<h1><b>Thank you</b></h1>
-					<h3>Check your inbox every day at 10 AM to see if you've been matched!</h3>
-					<br><br><br>
+					<h1>That's it!</h1>
+					<h3>Check your email every day at 10 AM to see if you've been matched!</h3>
+					<br><br>
 	    		</div>
 	    	</div>
 	    </div> <!--/ .container -->
@@ -414,7 +357,7 @@
 	</div>
 	<div id="c">
 		<div class="container">
-			<p>Created by <a href="http://www.malcolmocean.com">Malcolm Ocean</a>, Will Cullen and Noah MacCallum</p>
+			<p>Created by <a href="http://www.malcolmocean.com">Malcolm Ocean</a>, Will Cullen and <a href="https://ca.linkedin.com/pub/noah-maccallum/31/949/227">Noah MacCallum</a> at the University of Waterloo for the Winter 2015 <a href=http://www.kik.com/>Kik Hackathon.</a> All code is open source and available on Github.</p>
 		</div>
 	</div>
 
@@ -435,19 +378,28 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular-strap/2.0.0/angular-strap.tpl.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
     <script src="/js/index.js"></script>
+
+    <link href='css/fullcalendar.css' rel='stylesheet' />
+
+
     <script>
     	$(function() {
     		$('#calendar').fullCalendar({
     			header: {
     				left: 'prev,next today',
-    				center: 'title',
-    				right: 'month,agendaWeek,agendaDay'
+    				center: '',
+    				right: '             '
     			},
-    			defaultDate: '2014-11-12',
+    			defaultView: 'agendaWeek',
+    			minTime: '10:00:00',
+    			maxTime: '15:00:00',
+    			height: 287,
+    			allDaySlot: false,
+    			//defaultDate: '2014-11-12',
     			selectable: true,
     			selectHelper: true,
     			select: function(start, end) {
-    				var title = prompt('Event Title:');
+    				var title = 'Available';
     				var eventData;
     				if (title) {
     					eventData = {
@@ -461,31 +413,6 @@
     			},
     			editable: true,
     			eventLimit: true, // allow "more" link when too many events
-    			events: [
-    				{
-    					title: 'All Day Event',
-    					start: '2014-11-01'
-    				},
-    				{
-    					title: 'Long Event',
-    					start: '2014-11-07',
-    					end: '2014-11-10'
-    				},
-    				{
-    					id: 999,
-    					title: 'Repeating Event',
-    					start: '2014-11-09T16:00:00'
-    				},
-    				{
-    					title: 'Birthday Party',
-    					start: '2014-11-13T07:00:00'
-    				},
-    				{
-    					title: 'Click for Google',
-    					url: 'http://google.com/',
-    					start: '2014-11-28'
-    				}
-    			]
     		});
     	});
     </script>
